# mlpack_sample_project

./: .gitignore  CMakeLists.txt  README.md  install_mlpack.bash
src/: main.cpp
src/submodule/: CMakeLists.txt  myclass.cpp  myclass.hpp  submodule.hpp
test/: CMakeLists.txt
test/src/submodule/: CMakeLists.txt  test.cpp
